--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/hoabao0809/NJS101x_Assignment1_hoadnbFX16108-funix.edu.vn#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
